# Boost-TokenDistributor-Solana

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
programs/token_distributor/: Cargo.toml
programs/token_distributor/src/: constants.rs  error.rs  event.rs  lib.rs
programs/token_distributor/src/instructions/: claim.rs  close_claim_status.rs  create_distributor.rs  mod.rs  set_merkle_root.rs  set_time.rs  withdraw.rs
programs/token_distributor/src/state/: claim_state.rs  distributor_state.rs  mod.rs  nonce_state.rs
programs/token_distributor/src/test/: mod.rs  test_merkle.rs
programs/token_distributor/src/utils/: mod.rs  token.rs  verify.rs
tests/: poc_v01_permanent_delegate.ts  poc_v02_freeze_authority.ts  poc_v03_premature_withdrawal.ts  token_distributor.ts  token_distributor_bankrun.ts  token_distributor_bankrun_simple.ts  token_distributor_litesvm.ts  token_distributor_transfer_fee_litesvm.ts
tests/utils/: merkle_tree.ts
